--- a/requirements.txt
+++ b/requirements.txt
@@ -10,22 +10,36 @@ crayons==0.4.0
 cryptography==35.0.0
 h11==0.12.0
 idna==3.3
+imageio==2.14.1
+lark-parser==0.12.0
+minizinc==0.5.0
+networkx==2.6.3
 numpy==1.21.2
-opencv-contrib-python==4.5.3.56
-opencv-python==4.5.3.56
+opencv-contrib-python==4.5.5.62
 outcome==1.1.0
-Pillow==8.4.0
+packaging==21.3
+Pillow==8.2.0
 pycparser==2.20
 pyOpenSSL==21.0.0
+pyparsing==3.0.7
 pytesseract==0.3.8
+python-bidi==0.4.2
+PyWavelets==1.2.0
+PyYAML==6.0
 requests==2.26.0
+scikit-image==0.19.1
+scipy==1.7.3
 selenium==4.0.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.2.1
+tifffile==2021.11.2
+torch==1.10.2
+torchvision==0.11.3
 trio==0.19.0
 trio-websocket==0.9.2
+typing-extensions==4.0.1
 urllib3==1.26.7
 webdriver-manager==3.5.0
 wsproto==1.0.0
